dataset1235/2025-2/2947369575/users/2007236882/executions/1003782500_3455942218.log
== SUBMISSION (2025-09-01 22:15:34)
-- CODE: 
# Estepreco_unitario = flot(input())
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
X = floatt(input("Qual o valor unitario do jogo "))
Y = float(input("Qual o valor diposnivel para a aquisicao dos jogos? "))

# Calculo do valor a ser pago, incluindo o frete:
total = X*8+45.00
saldo = Y%total

# Impressao do valor total e do saldo:
print(round(total,1))
print(round(saldo,1))


-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100.0
900.0
---- correct output:
845.0
55.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    X = floatt(input("Qual o valor unitario do jogo "))
        ^^^^^^
NameError: name 'floatt' is not defined. Did you mean: 'float'?
-- TEST CASE 2:
---- input:
33.0
310.0
---- correct output:
309.0
1.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    X = floatt(input("Qual o valor unitario do jogo "))
        ^^^^^^
NameError: name 'floatt' is not defined. Did you mean: 'float'?
-- TEST CASE 3:
---- input:
356.0
4200.00
---- correct output:
2893.0
1307.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    X = floatt(input("Qual o valor unitario do jogo "))
        ^^^^^^
NameError: name 'floatt' is not defined. Did you mean: 'float'?
-- TEST CASE 4:
---- input:
123987.0
1000000.0
---- correct output:
991941.0
8059.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    X = floatt(input("Qual o valor unitario do jogo "))
        ^^^^^^
NameError: name 'floatt' is not defined. Did you mean: 'float'?
-- TEST CASE 5:
---- input:
1.2
70.00
---- correct output:
54.6
15.4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    X = floatt(input("Qual o valor unitario do jogo "))
        ^^^^^^
NameError: name 'floatt' is not defined. Did you mean: 'float'?
-- TEST CASE 6:
---- input:
20.0
400.0
---- correct output:
205.0
195.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    X = floatt(input("Qual o valor unitario do jogo "))
        ^^^^^^
NameError: name 'floatt' is not defined. Did you mean: 'float'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 22:13:55)
-- CODE: 
# Estepreco_unitario = flot(input())
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
X = floatt(input("Qual o valor unitario do jogo"))
????? = float(input("Qual o valor diposnivel para a aquisicao dos jogos? "))

# Calculo do valor a ser pago, incluindo o frete:
total = X*8+45.00
saldo = Y%total

# Impressao do valor total e do saldo:
print(round(total, 1))
print(round(saldo, 1))


-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100.0
900.0
---- correct output:
845.0
55.0
-- ERROR:
File "XXXX", line 6
    ????? = float(input("Qual o valor diposnivel para a aquisicao dos jogos? "))
    ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
33.0
310.0
---- correct output:
309.0
1.0
-- ERROR:
File "XXXX", line 6
    ????? = float(input("Qual o valor diposnivel para a aquisicao dos jogos? "))
    ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
356.0
4200.00
---- correct output:
2893.0
1307.0
-- ERROR:
File "XXXX", line 6
    ????? = float(input("Qual o valor diposnivel para a aquisicao dos jogos? "))
    ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
123987.0
1000000.0
---- correct output:
991941.0
8059.0
-- ERROR:
File "XXXX", line 6
    ????? = float(input("Qual o valor diposnivel para a aquisicao dos jogos? "))
    ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
1.2
70.00
---- correct output:
54.6
15.4
-- ERROR:
File "XXXX", line 6
    ????? = float(input("Qual o valor diposnivel para a aquisicao dos jogos? "))
    ^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
20.0
400.0
---- correct output:
205.0
195.0
-- ERROR:
File "XXXX", line 6
    ????? = float(input("Qual o valor diposnivel para a aquisicao dos jogos? "))
    ^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 21:56:30)
-- CODE: 
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
????? = f???t(input("Qual o valor unitario do jogo? "))
????? = f???t(input("Qual o valor diposnivel para a aquisicao dos jogos? "))

# Calculo do valor a ser pago, incluindo o frete:
total = ?????
saldo = ???

# Impressao do valor total e do saldo:
print(?????)
print(?????)

preco_unitario = flot(input())
dinheiro_disponivel = flot(input())

preco_unitario = * 8 + 45.0

saldo = dinheiro_disponivel - total 

print(round(preco_total, 1))
print( round(restante, 1))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100.0
900.0
---- correct output:
845.0
55.0
-- ERROR:
File "XXXX", line 5
    ????? = f???t(input("Qual o valor unitario do jogo? "))
    ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
33.0
310.0
---- correct output:
309.0
1.0
-- ERROR:
File "XXXX", line 5
    ????? = f???t(input("Qual o valor unitario do jogo? "))
    ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
356.0
4200.00
---- correct output:
2893.0
1307.0
-- ERROR:
File "XXXX", line 5
    ????? = f???t(input("Qual o valor unitario do jogo? "))
    ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
123987.0
1000000.0
---- correct output:
991941.0
8059.0
-- ERROR:
File "XXXX", line 5
    ????? = f???t(input("Qual o valor unitario do jogo? "))
    ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
1.2
70.00
---- correct output:
54.6
15.4
-- ERROR:
File "XXXX", line 5
    ????? = f???t(input("Qual o valor unitario do jogo? "))
    ^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
20.0
400.0
---- correct output:
205.0
195.0
-- ERROR:
File "XXXX", line 5
    ????? = f???t(input("Qual o valor unitario do jogo? "))
    ^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 22:15:33)
-- CODE: 
# Estepreco_unitario = flot(input())
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
X = floatt(input("Qual o valor unitario do jogo "))
Y = float(input("Qual o valor diposnivel para a aquisicao dos jogos? "))

# Calculo do valor a ser pago, incluindo o frete:
total = X*8+45.00
saldo = Y%total

# Impressao do valor total e do saldo:
print(round(total,1))
print(round(saldo,1))


-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100.0
900.0
---- correct output:
845.0
55.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    X = floatt(input("Qual o valor unitario do jogo "))
        ^^^^^^
NameError: name 'floatt' is not defined. Did you mean: 'float'?
-- TEST CASE 2:
---- input:
33.0
310.0
---- correct output:
309.0
1.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    X = floatt(input("Qual o valor unitario do jogo "))
        ^^^^^^
NameError: name 'floatt' is not defined. Did you mean: 'float'?
-- TEST CASE 3:
---- input:
356.0
4200.00
---- correct output:
2893.0
1307.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    X = floatt(input("Qual o valor unitario do jogo "))
        ^^^^^^
NameError: name 'floatt' is not defined. Did you mean: 'float'?
-- TEST CASE 4:
---- input:
123987.0
1000000.0
---- correct output:
991941.0
8059.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    X = floatt(input("Qual o valor unitario do jogo "))
        ^^^^^^
NameError: name 'floatt' is not defined. Did you mean: 'float'?
-- TEST CASE 5:
---- input:
1.2
70.00
---- correct output:
54.6
15.4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    X = floatt(input("Qual o valor unitario do jogo "))
        ^^^^^^
NameError: name 'floatt' is not defined. Did you mean: 'float'?
-- TEST CASE 6:
---- input:
20.0
400.0
---- correct output:
205.0
195.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    X = floatt(input("Qual o valor unitario do jogo "))
        ^^^^^^
NameError: name 'floatt' is not defined. Did you mean: 'float'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 22:14:35)
-- CODE: 
# Estepreco_unitario = flot(input())
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
X = floatt(input("Qual o valor unitario do jogo"))
Y = float(input("Qual o valor diposnivel para a aquisicao dos jogos? "))

# Calculo do valor a ser pago, incluindo o frete:
total = X*8+45.00
saldo = Y%total

# Impressao do valor total e do saldo:
print(round(total, 1))
print(round(saldo, 1))


-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100.0
900.0
---- correct output:
845.0
55.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    X = floatt(input("Qual o valor unitario do jogo"))
        ^^^^^^
NameError: name 'floatt' is not defined. Did you mean: 'float'?
-- TEST CASE 2:
---- input:
33.0
310.0
---- correct output:
309.0
1.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    X = floatt(input("Qual o valor unitario do jogo"))
        ^^^^^^
NameError: name 'floatt' is not defined. Did you mean: 'float'?
-- TEST CASE 3:
---- input:
356.0
4200.00
---- correct output:
2893.0
1307.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    X = floatt(input("Qual o valor unitario do jogo"))
        ^^^^^^
NameError: name 'floatt' is not defined. Did you mean: 'float'?
-- TEST CASE 4:
---- input:
123987.0
1000000.0
---- correct output:
991941.0
8059.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    X = floatt(input("Qual o valor unitario do jogo"))
        ^^^^^^
NameError: name 'floatt' is not defined. Did you mean: 'float'?
-- TEST CASE 5:
---- input:
1.2
70.00
---- correct output:
54.6
15.4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    X = floatt(input("Qual o valor unitario do jogo"))
        ^^^^^^
NameError: name 'floatt' is not defined. Did you mean: 'float'?
-- TEST CASE 6:
---- input:
20.0
400.0
---- correct output:
205.0
195.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    X = floatt(input("Qual o valor unitario do jogo"))
        ^^^^^^
NameError: name 'floatt' is not defined. Did you mean: 'float'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 22:14:08)
-- CODE: 
# Estepreco_unitario = flot(input())
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
X = floatt(input("Qual o valor unitario do jogo"))
????? = float(input("Qual o valor diposnivel para a aquisicao dos jogos? "))

# Calculo do valor a ser pago, incluindo o frete:
total = X * 8+45.00
saldo = Y % total

# Impressao do valor total e do saldo:
print(round(total, 1))
print(round(saldo, 1))


-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100.0
900.0
---- correct output:
845.0
55.0
-- ERROR:
File "XXXX", line 6
    ????? = float(input("Qual o valor diposnivel para a aquisicao dos jogos? "))
    ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
33.0
310.0
---- correct output:
309.0
1.0
-- ERROR:
File "XXXX", line 6
    ????? = float(input("Qual o valor diposnivel para a aquisicao dos jogos? "))
    ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
356.0
4200.00
---- correct output:
2893.0
1307.0
-- ERROR:
File "XXXX", line 6
    ????? = float(input("Qual o valor diposnivel para a aquisicao dos jogos? "))
    ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
123987.0
1000000.0
---- correct output:
991941.0
8059.0
-- ERROR:
File "XXXX", line 6
    ????? = float(input("Qual o valor diposnivel para a aquisicao dos jogos? "))
    ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
1.2
70.00
---- correct output:
54.6
15.4
-- ERROR:
File "XXXX", line 6
    ????? = float(input("Qual o valor diposnivel para a aquisicao dos jogos? "))
    ^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
20.0
400.0
---- correct output:
205.0
195.0
-- ERROR:
File "XXXX", line 6
    ????? = float(input("Qual o valor diposnivel para a aquisicao dos jogos? "))
    ^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 22:14:37)
-- CODE: 
# Estepreco_unitario = flot(input())
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
X = floatt(input("Qual o valor unitario do jogo"))
Y = float(input("Qual o valor diposnivel para a aquisicao dos jogos? "))

# Calculo do valor a ser pago, incluindo o frete:
total = X*8+45.00
saldo = Y%total

# Impressao do valor total e do saldo:
print(round(total, 1))
print(round(saldo, 1))


-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100.0
900.0
---- correct output:
845.0
55.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    X = floatt(input("Qual o valor unitario do jogo"))
        ^^^^^^
NameError: name 'floatt' is not defined. Did you mean: 'float'?
-- TEST CASE 2:
---- input:
33.0
310.0
---- correct output:
309.0
1.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    X = floatt(input("Qual o valor unitario do jogo"))
        ^^^^^^
NameError: name 'floatt' is not defined. Did you mean: 'float'?
-- TEST CASE 3:
---- input:
356.0
4200.00
---- correct output:
2893.0
1307.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    X = floatt(input("Qual o valor unitario do jogo"))
        ^^^^^^
NameError: name 'floatt' is not defined. Did you mean: 'float'?
-- TEST CASE 4:
---- input:
123987.0
1000000.0
---- correct output:
991941.0
8059.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    X = floatt(input("Qual o valor unitario do jogo"))
        ^^^^^^
NameError: name 'floatt' is not defined. Did you mean: 'float'?
-- TEST CASE 5:
---- input:
1.2
70.00
---- correct output:
54.6
15.4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    X = floatt(input("Qual o valor unitario do jogo"))
        ^^^^^^
NameError: name 'floatt' is not defined. Did you mean: 'float'?
-- TEST CASE 6:
---- input:
20.0
400.0
---- correct output:
205.0
195.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    X = floatt(input("Qual o valor unitario do jogo"))
        ^^^^^^
NameError: name 'floatt' is not defined. Did you mean: 'float'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 22:14:33)
-- CODE: 
# Estepreco_unitario = flot(input())
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
X = floatt(input("Qual o valor unitario do jogo"))
Y = float(input("Qual o valor diposnivel para a aquisicao dos jogos? "))

# Calculo do valor a ser pago, incluindo o frete:
total = X*8+45.00
saldo = Y%total

# Impressao do valor total e do saldo:
print(round(total, 1))
print(round(saldo, 1))


-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100.0
900.0
---- correct output:
845.0
55.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    X = floatt(input("Qual o valor unitario do jogo"))
        ^^^^^^
NameError: name 'floatt' is not defined. Did you mean: 'float'?
-- TEST CASE 2:
---- input:
33.0
310.0
---- correct output:
309.0
1.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    X = floatt(input("Qual o valor unitario do jogo"))
        ^^^^^^
NameError: name 'floatt' is not defined. Did you mean: 'float'?
-- TEST CASE 3:
---- input:
356.0
4200.00
---- correct output:
2893.0
1307.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    X = floatt(input("Qual o valor unitario do jogo"))
        ^^^^^^
NameError: name 'floatt' is not defined. Did you mean: 'float'?
-- TEST CASE 4:
---- input:
123987.0
1000000.0
---- correct output:
991941.0
8059.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    X = floatt(input("Qual o valor unitario do jogo"))
        ^^^^^^
NameError: name 'floatt' is not defined. Did you mean: 'float'?
-- TEST CASE 5:
---- input:
1.2
70.00
---- correct output:
54.6
15.4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    X = floatt(input("Qual o valor unitario do jogo"))
        ^^^^^^
NameError: name 'floatt' is not defined. Did you mean: 'float'?
-- TEST CASE 6:
---- input:
20.0
400.0
---- correct output:
205.0
195.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    X = floatt(input("Qual o valor unitario do jogo"))
        ^^^^^^
NameError: name 'floatt' is not defined. Did you mean: 'float'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 22:15:48)
-- CODE: 
# Estepreco_unitario = flot(input())
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
X = float(input("Qual o valor unitario do jogo "))
Y = float(input("Qual o valor diposnivel para a aquisicao dos jogos? "))

# Calculo do valor a ser pago, incluindo o frete:
total = X*8+45.00
saldo = Y%total

# Impressao do valor total e do saldo:
print(round(total,1))
print(round(saldo,1))


-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
100.0
900.0
---- correct output:
845.0
55.0
---- user output:
55.0
-- TEST CASE 2:
---- input:
33.0
310.0
---- correct output:
309.0
1.0
---- user output:
1.0
-- TEST CASE 3:
---- input:
356.0
4200.00
---- correct output:
2893.0
1307.0
---- user output:
1307.0
-- TEST CASE 4:
---- input:
123987.0
1000000.0
---- correct output:
991941.0
8059.0
---- user output:
8059.0
-- TEST CASE 5:
---- input:
1.2
70.00
---- correct output:
54.6
15.4
---- user output:
15.4
-- TEST CASE 6:
---- input:
20.0
400.0
---- correct output:
205.0
195.0
---- user output:
195.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 21:53:08)
-- CODE: 
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
????? = f???t(input("Qual o valor unitario do jogo? "))
????? = f???t(input("Qual o valor diposnivel para a aquisicao dos jogos? "))

# Calculo do valor a ser pago, incluindo o frete:
total = ?????
saldo = ???

# Impressao do valor total e do saldo:
print(?????)
print(?????)

preco_jogo = flot(input())
dinheiro_disponivel = flot(input())

total_jogos = preco_jogo * 8
frete = 45.0
preco_jogo = jogo_total + frete
restante = dinheiro_disponivel - preco_total

print(round(preco_total, 1))
print( round(restante, 1))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100.0
900.0
---- correct output:
845.0
55.0
-- ERROR:
File "XXXX", line 5
    ????? = f???t(input("Qual o valor unitario do jogo? "))
    ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
33.0
310.0
---- correct output:
309.0
1.0
-- ERROR:
File "XXXX", line 5
    ????? = f???t(input("Qual o valor unitario do jogo? "))
    ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
356.0
4200.00
---- correct output:
2893.0
1307.0
-- ERROR:
File "XXXX", line 5
    ????? = f???t(input("Qual o valor unitario do jogo? "))
    ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
123987.0
1000000.0
---- correct output:
991941.0
8059.0
-- ERROR:
File "XXXX", line 5
    ????? = f???t(input("Qual o valor unitario do jogo? "))
    ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
1.2
70.00
---- correct output:
54.6
15.4
-- ERROR:
File "XXXX", line 5
    ????? = f???t(input("Qual o valor unitario do jogo? "))
    ^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
20.0
400.0
---- correct output:
205.0
195.0
-- ERROR:
File "XXXX", line 5
    ????? = f???t(input("Qual o valor unitario do jogo? "))
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 22:14:36)
-- CODE: 
# Estepreco_unitario = flot(input())
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
X = floatt(input("Qual o valor unitario do jogo"))
Y = float(input("Qual o valor diposnivel para a aquisicao dos jogos? "))

# Calculo do valor a ser pago, incluindo o frete:
total = X*8+45.00
saldo = Y%total

# Impressao do valor total e do saldo:
print(round(total, 1))
print(round(saldo, 1))


-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100.0
900.0
---- correct output:
845.0
55.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    X = floatt(input("Qual o valor unitario do jogo"))
        ^^^^^^
NameError: name 'floatt' is not defined. Did you mean: 'float'?
-- TEST CASE 2:
---- input:
33.0
310.0
---- correct output:
309.0
1.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    X = floatt(input("Qual o valor unitario do jogo"))
        ^^^^^^
NameError: name 'floatt' is not defined. Did you mean: 'float'?
-- TEST CASE 3:
---- input:
356.0
4200.00
---- correct output:
2893.0
1307.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    X = floatt(input("Qual o valor unitario do jogo"))
        ^^^^^^
NameError: name 'floatt' is not defined. Did you mean: 'float'?
-- TEST CASE 4:
---- input:
123987.0
1000000.0
---- correct output:
991941.0
8059.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    X = floatt(input("Qual o valor unitario do jogo"))
        ^^^^^^
NameError: name 'floatt' is not defined. Did you mean: 'float'?
-- TEST CASE 5:
---- input:
1.2
70.00
---- correct output:
54.6
15.4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    X = floatt(input("Qual o valor unitario do jogo"))
        ^^^^^^
NameError: name 'floatt' is not defined. Did you mean: 'float'?
-- TEST CASE 6:
---- input:
20.0
400.0
---- correct output:
205.0
195.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    X = floatt(input("Qual o valor unitario do jogo"))
        ^^^^^^
NameError: name 'floatt' is not defined. Did you mean: 'float'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 22:15:45)
-- CODE: 
# Estepreco_unitario = flot(input())
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
X = float(input("Qual o valor unitario do jogo "))
Y = float(input("Qual o valor diposnivel para a aquisicao dos jogos? "))

# Calculo do valor a ser pago, incluindo o frete:
total = X*8+45.00
saldo = Y%total

# Impressao do valor total e do saldo:
print(round(total,1))
print(round(saldo,1))


-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100.0
900.0
---- correct output:
845.0
55.0
---- user output:
55.0
-- TEST CASE 2:
---- input:
33.0
310.0
---- correct output:
309.0
1.0
---- user output:
1.0
-- TEST CASE 3:
---- input:
356.0
4200.00
---- correct output:
2893.0
1307.0
---- user output:
1307.0
-- TEST CASE 4:
---- input:
123987.0
1000000.0
---- correct output:
991941.0
8059.0
---- user output:
8059.0
-- TEST CASE 5:
---- input:
1.2
70.00
---- correct output:
54.6
15.4
---- user output:
15.4
-- TEST CASE 6:
---- input:
20.0
400.0
---- correct output:
205.0
195.0
---- user output:
195.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 21:53:12)
-- CODE: 
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
????? = f???t(input("Qual o valor unitario do jogo? "))
????? = f???t(input("Qual o valor diposnivel para a aquisicao dos jogos? "))

# Calculo do valor a ser pago, incluindo o frete:
total = ?????
saldo = ???

# Impressao do valor total e do saldo:
print(?????)
print(?????)

preco_jogo = flot(input())
dinheiro_disponivel = flot(input())

total_jogos = preco_jogo * 8
frete = 45.0
preco_jogo = jogo_total + frete
restante = dinheiro_disponivel - preco_total

print(round(preco_total, 1))
print( round(restante, 1))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100.0
900.0
---- correct output:
845.0
55.0
-- ERROR:
File "XXXX", line 5
    ????? = f???t(input("Qual o valor unitario do jogo? "))
    ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
33.0
310.0
---- correct output:
309.0
1.0
-- ERROR:
File "XXXX", line 5
    ????? = f???t(input("Qual o valor unitario do jogo? "))
    ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
356.0
4200.00
---- correct output:
2893.0
1307.0
-- ERROR:
File "XXXX", line 5
    ????? = f???t(input("Qual o valor unitario do jogo? "))
    ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
123987.0
1000000.0
---- correct output:
991941.0
8059.0
-- ERROR:
File "XXXX", line 5
    ????? = f???t(input("Qual o valor unitario do jogo? "))
    ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
1.2
70.00
---- correct output:
54.6
15.4
-- ERROR:
File "XXXX", line 5
    ????? = f???t(input("Qual o valor unitario do jogo? "))
    ^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
20.0
400.0
---- correct output:
205.0
195.0
-- ERROR:
File "XXXX", line 5
    ????? = f???t(input("Qual o valor unitario do jogo? "))
    ^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
